sig sig interactions in TCGA, immune interactions in PCAWG

--- a/analysis/PCAWG_immune_states.Rmd
+++ b/analysis/PCAWG_immune_states.Rmd
@@ -16,9 +16,14 @@ knitr::opts_chunk$set(comment = '', fig.width = 6,
 library(here)
 fig.dir = here("figures/immune_analysis")
 
-if(! file.exists(fig.dir)){
-    dir.create(fig.dir, recursive = TRUE)
+
+for (dir.path in c(fig.dir, file.path( fig.dir, 
+                                  "immune_to_signature", "by_tissues", "oddsratio"))) {
+    if(! file.exists(dir.path)){
+        dir.create(dir.path, recursive = TRUE)
+    }   
 }
+
 
 source(here("R/load_packages.R"))
 
@@ -180,7 +185,7 @@ pcawg.immune.states.plot = pcawg.immune.summaries.gg %>%
     xlab("") + ylab("") + 
     ggtitle("Immune classes across cancer types",) +
     theme(panel.grid = element_blank(),
-          axis.text.x = element_text(angle = 90, hjust = 1, vjust = 1),
+          axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
           legend.position = "none",
           plot.title = element_text(size = 12),
           plot.margin = margin(t = 0,  # Top margin
@@ -191,5 +196,42 @@ pcawg.immune.states.plot = pcawg.immune.summaries.gg %>%
 ggsave(plot = pcawg.immune.states.plot, 
      file = file.path(fig.dir, "pcawg.immune.states.heatmap.png"),
                       width = 5, height = 5, bg = "white")
+```
+
+### Immune states and pathway interactions
+
+```{r}
+immune.states.tissues = immune.states %>% 
+    pivot_wider(id_cols = c(sample_id, donor_id, Cancer.Types), 
+                 names_from = Majority, values_from = Prop) %>% 
+    mutate(across(C2:C5, ~ifelse(is.na(.), 0, .))) %>% 
+    mutate(across(C2:C5, ~ifelse(. > 0, 1, .))) %>% 
+    mutate(across(C2:C5, as.integer))
+```
+
+
+```{r}
+immune.tissue.odds.ratio = pcawg_sig_pathway_int(sigs.input = PCAWG.full.subset.ann.immune,
+                                 pathways.input = immune.states.tissues,
+                                 interaction_function = get_sig_path_assocs, 
+                                 path.min.tissues = 30,
+                                 p.val.threshold = 0.2,
+                                 p.adjust = TRUE,
+                                 method = "BH")
+
+
+for (tissue in names(immune.tissue.odds.ratio)) {
+   
+    if (any(abs(immune.tissue.odds.ratio[[tissue]]) > 0) ) {
+        cat(tissue, "\n")
+        int.heatmap = ggheatmap_wrapper(immune.tissue.odds.ratio[[tissue]], 
+                                        title = tissue)
+        
+        ggsave(plot = int.heatmap,
+               filename = file.path(fig.dir, "immune_to_signature", "by_tissues", "oddsratio",  
+                                    paste0(tissue, "_sig_pathway.dotplot.png")),
+               height = 5, width = 6, bg = "white")
+    }
+}
 ```
 
