old code about survival and pathway analysis updates

--- a/analysis/PCAWG_pathways.Rmd
+++ b/analysis/PCAWG_pathways.Rmd
@@ -166,13 +166,50 @@ for (tissue in names(tissue.odds.ratio)) {
         int.heatmap = ggheatmap_wrapper(tissue.odds.ratio[[tissue]], 
                                         title = tissue)
         
+        print(int.heatmap)
         ggsave(plot = int.heatmap,
-               filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",  
+               filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
                                     paste0(tissue, "_sig_pathway.dotplot.png")),
                height = 5, width = 6, bg = "white")
     }
 }
 ```
+
+
+```{r}
+tissue.odds.ratio.unadjusted = pcawg_sig_pathway_int(sigs.input = PCAWG.full.subset.ann.pathways,
+                                 pathways.input = mutated.pathways.tissues,
+                                 interaction_function = get_sig_path_assocs, 
+                                 path.min.tissues = 30,
+                                 p.val.threshold = 0.05,
+                                 p.adjust = FALSE,
+                                 method = "BH")
+
+for (tissue in names(tissue.odds.ratio.unadjusted)) {
+   
+    if (any(abs(tissue.odds.ratio.unadjusted[[tissue]]) > 0) ) {
+        cat(tissue, "\n")
+        int.heatmap = ggheatmap_wrapper(tissue.odds.ratio.unadjusted[[tissue]], 
+                                        title = tissue)
+        
+        print(int.heatmap)
+        ggsave(plot = int.heatmap,
+               filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
+                                    paste0("PCAWG_", tissue, "_sig_pathway_unadjusted.dotplot.png")),
+               height = 5, width = 6, bg = "white")
+    }
+}
+```
+
+```{r}
+pp.odds.ratio.unadjusted = plot_all_counts(tissue.odds.ratio.unadjusted, threshold = 0.2, psize = 5)
+
+ggsave(plot = pp.odds.ratio.unadjusted,
+               filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
+                                    "PCAWG_summarized_sig_pathway_unadjusted.dotplot.pdf"),
+               height = 3, width = 5, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+```
+
 
 ### Linear regression predicting signatures from pathways across tissues
 
@@ -201,7 +238,7 @@ for (tissue in abundant.tissues) {
         ggsave(plot = int.heatmap,
                filename = file.path(fig.dir, "pathway_to_signature",
                                     "by_tissues", "lm_log", 
-                                    paste0(tissue, "_sig_tilde_pathway.dotplot.png")),
+                                    paste0("PCAWG_", tissue, "_sig_tilde_pathway.dotplot.png")),
                height = 5, width = 6, bg = "white")
     }
 }
@@ -230,7 +267,7 @@ for (tissue in abundant.tissues) {
         
         ggsave(plot = int.heatmap,
                filename = file.path(fig.dir,"pathway_to_signature", "by_tissues", "lm_counts", 
-                                    paste0(tissue, "_sig_tilde_pathway.dotplot.png")),
+                                    paste0("PCAWG_", tissue, "_sig_tilde_pathway.dotplot.png")),
                height = 5, width = 6, bg = "white")
     }
 }
@@ -245,12 +282,12 @@ print(pp.logged)
 ggsave(plot = pp.logged,
                filename = file.path(fig.dir, "pathway_to_signature", 
                                     "by_tissues", "lm_log", 
-                                    "logged_summarized_OLS.png"),
+                                    "PCAWG_logged_summarized_OLS.png"),
                height = 2.3, width = 2.9, bg = "white")
 
 ggsave(plot = pp.logged,
                filename = file.path(fig.dir, "pathway_to_signature", 
-                                    "by_tissues", "lm_log", "logged_summarized_OLS_path_to_sigs.pdf"),
+                                    "by_tissues", "lm_log", "PCAWG_logged_summarized_OLS_path_to_sigs.pdf"),
                height = 2.3, width = 2.9, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
 
 ```
@@ -265,12 +302,12 @@ print(pp.logged.excl.melanoma)
 ggsave(plot = pp.logged.excl.melanoma,
                filename = file.path(fig.dir, "pathway_to_signature", 
                                     "by_tissues", "lm_log", 
-                                    "logged_summarized_OLS_excl_melanoma_path_to_sigs.png"),
+                                    "PCAWG_logged_summarized_OLS_excl_melanoma_path_to_sigs.png"),
                height = 2, width = 2.4, bg = "white")
 
 ggsave(plot = pp.logged.excl.melanoma,
                filename = file.path(fig.dir, "pathway_to_signature", 
-                                    "by_tissues", "lm_log", "logged_summarized_OLS_excl_melanoma_path_to_sigs.pdf"),
+                                    "by_tissues", "lm_log", "PCAWG_logged_summarized_OLS_excl_melanoma_path_to_sigs.pdf"),
                height = 6, width = 8, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
 
 ```
@@ -360,7 +397,7 @@ skin.hippo.apo = skin.concat %>%
     geom_smooth(aes(group = 1), 
                     data = skin.concat, method = lm, se = FALSE)
 
-ggsave(filename = file.path(fig.dir, paste0(tissue, "apobec_hippo_relationship.png")), 
+ggsave(filename = file.path(fig.dir, paste0(tissue, "_apobec_hippo_relationship.png")), 
        plot = skin.hippo.apo, width = 4, height = 3.2)
 ```
 
@@ -373,7 +410,7 @@ skin.hippo.apo.rev = skin.concat %>%
     method.args = list(family = "binomial"), 
     se = FALSE) + geom_jitter(aes(color = factor(HIPPO)), width = 0.1, height = 0.1)
 
-ggsave(filename = file.path(fig.dir, paste0(tissue, "apobec_hippo_rev_relationship_logistic.png")), 
+ggsave(filename = file.path(fig.dir, paste0(tissue, "_apobec_hippo_rev_relationship_logistic.png")), 
        plot = skin.hippo.apo.rev, width = 4, height = 3.2)
 ```
 
@@ -404,7 +441,7 @@ for (tissue in abundant.tissues) {
         ggsave(plot = int.heatmap,
                filename = file.path(fig.dir, "signature_to_pathway", 
                                     "by_tissues", "log_log", 
-                                    paste0(tissue, "_path_tilde_sig.dotplot.png")),
+                                    paste0("PCAWG_", tissue, "_path_tilde_sig.dotplot.png")),
                height = 5, width = 6, bg = "white")
     }
 }
@@ -421,11 +458,7 @@ print(pp.log.log)
 ggsave(plot = pp.log.log,
                filename = file.path(fig.dir, "signature_to_pathway", 
                                     "by_tissues", "log_log", 
-                                    "logged_summarized.png"),
+                                    "PCAWG_logged_summarized.png"),
                height = 1.15, width = 1.6, bg = "white")
-```
-
-```{r}
-
 ```
 
